<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_drawer"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:background="@drawable/bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/upperImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logoImage"
                android:clickable="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/upperImage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/navi_text_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/navi_text_view1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/app_version"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_setting0"
        android:clickable="true"
        android:background="@drawable/settingclick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/setting_button_margin_right">

            <ImageView
                android:layout_width="@dimen/setting_button_width"
                android:layout_height="@dimen/setting_button_height"
                android:layout_weight="0.15"
                android:layout_marginTop="@dimen/setting_image_margin_bottom"
                android:layout_marginBottom="@dimen/setting_image_margin_bottom"
                android:src="@drawable/shopping_box_icon_pnas" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/drawer_first_menu"
                android:layout_weight="0.7"
                android:textColor="@color/setting_font_color"
                android:textSize="@dimen/setting_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="0.15"
                android:textSize="@dimen/setting_text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/setting_line_breaker"/>

    <LinearLayout
        android:id="@+id/btn_setting1"
        android:clickable="true"
        android:background="@drawable/settingclick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="@dimen/setting_button_margin_right">

        <ImageView
            android:layout_width="@dimen/setting_button_width"
            android:layout_height="@dimen/setting_button_height"
            android:layout_weight="0.13"
            android:layout_marginTop="@dimen/setting_image_margin_bottom"
            android:layout_marginBottom="@dimen/setting_image_margin_bottom"
            android:src="@drawable/ic_folder_shared_black_48dp_pnas" />

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.87"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/drawer_second_menu"
                android:textColor="@color/setting_font_color"
                android:textSize="@dimen/setting_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="3sp"
                android:gravity="center_vertical"
                android:text="@string/drawer_second_menu_summary"
                android:textColor="@color/setting_font_color_summary"
                android:textSize="@dimen/setting_text_size_small" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/setting_line_breaker"/>

    <LinearLayout
        android:id="@+id/btn_setting2"
        android:clickable="true"
        android:background="@drawable/settingclick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="@dimen/setting_button_margin_right">

        <ImageView
            android:layout_width="@dimen/setting_button_width"
            android:layout_height="@dimen/setting_button_height"
            android:layout_weight="0.13"
            android:layout_marginTop="@dimen/setting_image_margin_bottom"
            android:layout_marginBottom="@dimen/setting_image_margin_bottom"
            android:src="@drawable/ic_archive_black_48dp_pnas" />

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.87"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/drawer_third_menu"
                android:textColor="@color/setting_font_color"
                android:textSize="@dimen/setting_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="3sp"
                android:gravity="center_vertical"
                android:text="@string/drawer_third_menu_summary"
                android:textColor="@color/setting_font_color_summary"
                android:textSize="@dimen/setting_text_size_small" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/btn_setting23"
            android:background="@drawable/settingclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingRight="@dimen/setting_button_margin_right">

            <EditText
                android:id="@+id/other_code"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:background="@drawable/new_editbox"
                android:layout_marginBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingRight="48dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textSize="25sp"
                android:maxLength="3"
                android:singleLine="true"
                android:inputType="number" />

            <ImageView
                android:id="@+id/enterImage"
                android:clickable="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_archive_black_48dp_pnas" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>