<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/setting_background" />

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context="com.ssm.pnas.userSetting.MainActivity">

        <!-- As the main content view, the view below consumes the entire
             space available using match_parent in both dimensions. -->
        <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- android:layout_gravity="start" tells DrawerLayout to treat
             this as a sliding drawer on the left side for left-to-right
             languages and on the right side for right-to-left languages.
             If you're not building against API 17 or higher, use
             android:layout_gravity="left" instead. -->
        <!-- The drawer is given a fixed width in dp and extends the full height of
             the container. -->


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/drawer"
            android:clickable="true"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#FFFFFF"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:background="@drawable/bg"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/upperImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logoImage"
                    android:clickable="true"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/upperImage1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/navi_text_view1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/appVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/navi_text_view1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/app_version"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_setting0"
            android:clickable="true"
            android:background="@drawable/settingclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="@dimen/setting_button_margin_right">

                <ImageView
                    android:layout_width="@dimen/setting_button_width"
                    android:layout_height="@dimen/setting_button_height"
                    android:layout_weight="0.15"
                    android:layout_marginTop="@dimen/setting_image_margin_bottom"
                    android:layout_marginBottom="@dimen/setting_image_margin_bottom"
                    android:src="@drawable/ic_power_settings_new_black_36dp" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/noticalltoglle"
                    android:layout_weight="0.7"
                    android:textColor="@color/setting_font_color"
                    android:textSize="@dimen/setting_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.15"
                    android:textSize="@dimen/setting_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/setting_line_breaker"/>

            <LinearLayout
                android:id="@+id/btn_setting1"
                android:clickable="true"
                android:background="@drawable/settingclick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="@dimen/setting_button_margin_right">

                <ImageView
                    android:layout_width="@dimen/setting_button_width"
                    android:layout_height="@dimen/setting_button_height"
                    android:layout_weight="0.13"
                    android:layout_marginTop="@dimen/setting_image_margin_bottom"
                    android:layout_marginBottom="@dimen/setting_image_margin_bottom"
                    android:src="@drawable/ic_settings_black_36dp" />

                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.87"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/advancedsetting"
                        android:textColor="@color/setting_font_color"
                        android:textSize="@dimen/setting_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3sp"
                        android:gravity="center_vertical"
                        android:text="@string/advancedsetting_summary"
                        android:textColor="@color/setting_font_color_summary"
                        android:textSize="@dimen/setting_text_size_small" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>